fixing remarks 2.0